# MCP-Procuction_MySQL

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  setup.py  wrangler.toml
src/: __init__.py  config.py  main.py  models.py  server.py
src/auth/: __init__.py  github_oauth.py  session.py
src/database/: __init__.py  connection.py  security.py  utils.py
src/monitoring/: __init__.py  sentry.py
src/tools/: __init__.py  advanced_tools.py  basic_tools.py  register_tools.py  transaction_tools.py  write_tools.py
tests/: __init__.py  test_basic.py
